--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,8 @@
     </ion-item>
 
     <!-- Submit -->
-    <button ion-button block> Entrar </button>
+    <!-- (click)="login ()" = Aplica um binding a uma funcao declarada no Controlador -->
+    <button ion-button block (click)="login ()"> Entrar </button>
   </form>
 
   <!-- Signup -->
