--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -6,7 +6,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>categorias</ion-title>
+    <ion-title> Categorias </ion-title>
   </ion-navbar>
 </ion-header>
 
