Criando página de Signup

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,10 +23,10 @@
 
     <!-- Submit -->
     <!-- (click)="login ()" = Aplica um binding a uma funcao declarada no Controlador -->
-    <button ion-button block (click)="login ()"> Entrar </button>
+    <button ion-button block (click)="login ();"> Entrar </button>
   </form>
 
   <!-- Signup -->
-  <button ion-button block outline> Registrar </button>
+  <button ion-button block outline (click)="signUp ();" > Registrar </button>
 
 </ion-content>
