--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -97,8 +97,7 @@
     <ion-item>
       <ion-label stacked> * Estado: </ion-label>
       <ion-select formControlName="estadoID" (ionChange)="updateCidades ();">
-        <ion-option value="1"> Minas Gerais </ion-option>
-        <ion-option value="2"> São Paulo </ion-option>
+        <ion-option *ngFor="let estado of estados; first as f" [value]="estado.id" [selected]="f"> {{estado.nome}} </ion-option>
       </ion-select>
     </ion-item>
 
@@ -106,8 +105,7 @@
     <ion-item>
       <ion-label stacked> * Cidade: </ion-label>
       <ion-select formControlName="cidadeID">
-        <ion-option value="1"> Uberlândia </ion-option>
-        <ion-option value="2"> Campinas </ion-option>
+        <ion-option *ngFor="let cidade of cidades;" [value]="cidade.id"> {{cidade.nome}} </ion-option>
       </ion-select>
     </ion-item>
 
