--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -15,7 +15,7 @@
   <ion-list>
 
     <!-- *ngFor = Diretiva do Angular utilizada para iterar uma colecao -->
-    <button ion-item *ngFor="let item of items">
+    <button ion-item *ngFor="let item of items" (click)="showProdutos ();">
       <ion-thumbnail item-start>
         <img src="{{ bucketUrl }}/cat{{ item.id }}.jpg">
       </ion-thumbnail>
