--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -12,7 +12,7 @@
   <ion-list>
 
     <!-- Item da lista de produto -->
-    <button ion-item *ngFor="let item of items" (click)="showDetail ();">
+    <button ion-item *ngFor="let item of items" (click)="showDetail (item.id);">
       <ion-thumbnail item-start>
         <img [src]="item.imageURL || 'assets/imgs/prod.jpg'">
       </ion-thumbnail>
