Terminando as funcionalidades do Carrinho

--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -22,7 +22,23 @@
       <!-- Dados -->
       <h2> {{ item.produto.nome }} </h2>
       <p> {{ item.produto.preco | currency }} </p>
-      <p> {{ item.quantidade }} </p>
+
+      <ion-icon name="remove-circle" class="no-line-break" color="primary" (click)="decreaseQuantity (item.produto);"></ion-icon>
+      <p class="no-line-break"> {{ item.quantidade }} </p>
+      <ion-icon name="add-circle" class="no-line-break" color="primary" (click)="increaseQuantity (item.produto);"></ion-icon>
+      <ion-icon name="trash" color="danger" item-end (click)="removeItem (item.produto); "></ion-icon>
+
+    </ion-item>
+
+    <ion-item *ngIf=" getTotal () > 0">
+      <h1> Total: </h1>
+      <h1 item-end> {{ getTotal () | currency }} </h1>
+    </ion-item>
+
+    <ion-item *ngIf=" getTotal () <= 0">
+      <h1> Seu carrinho está vazio! </h1>
     </ion-item>
   </ion-list>
+
+  <button ion-button block (click)="goOn ();"> Continuar comprando </button>
 </ion-content>
