--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -11,6 +11,13 @@
 </ion-header>
 
 <ion-content padding>
+
+  <!-- Botao flutuante para Carrinho -->
+  <ion-fab top right edge>
+    <button navPush="CartPage" ion-fab mini>
+      <ion-icon name="cart"></ion-icon>
+    </button>
+  </ion-fab>
   
   <ion-list>
 
