--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -9,6 +9,14 @@
 </ion-header>
 
 <ion-content padding>
+
+  <!-- Botao flutuante para Carrinho -->
+  <ion-fab top right edge>
+    <button navPush="CartPage" ion-fab mini>
+      <ion-icon name="cart"></ion-icon>
+    </button>
+  </ion-fab>
+
   <ion-list>
 
     <!-- Item da lista de produto -->
