--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -41,4 +41,6 @@
   </ion-list>
 
   <button ion-button block (click)="goOn ();"> Continuar comprando </button>
+  <button ion-button color="secondary" block (click)="checkout ();"> Finalizar pedido </button>
+
 </ion-content>
