--- a/src/pages/order-confirmation/order-confirmation.html
+++ b/src/pages/order-confirmation/order-confirmation.html
@@ -68,4 +68,7 @@
     </ion-item>
   </ion-card>
 
+  <button ion-button block (click)="checkout ();"> Confirmar Pedido </button>
+  <button ion-button block outline (click)="getBack ();"> Voltar </button>
+
 </ion-content>
