--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -35,4 +35,9 @@
       <p> {{item.preco | currency}} </p>
     </button>
   </ion-list>
+
+  <!-- Infinite Scroll -->
+  <ion-infinite-scroll (ionInfinite)="doInfinite ($event);">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
