Bugfix: Atualizacao da Imagem de Perfil

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -15,7 +15,7 @@
   <!-- Imagem-->
   <ion-avatar>
     <!-- [campoHTML] = Indica binding de dados -->
-    <img class="circle" [src]="clienteDto?.imageUrl || 'assets/imgs/avatar-blank.png'">
+    <img class="circle" [src]="profileImage">
   </ion-avatar>
 
   <!-- Informacoes -->
